--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
 </head>
 
-<body onload="notTimeOnly()">
+<body onload="timeOnly()">
     <div class="wrapper">
         <nav id="navigation">
             <div id="nav_container">
