--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
 </head>
 
-<body onload="timeOnly()">
+<body>
     <div class="wrapper">
         <nav id="navigation">
             <div id="nav_container">
@@ -44,7 +44,7 @@
 
                     document.getElementById("nav_time").style.width = "55.5%";
                     document.getElementById("nav_time").style.height = "100%";
-                    document.getElementById("nav_time").style.fontSize = "256px";
+                    document.getElementById("nav_time").style.fontSize = "13vw";
                     document.getElementById("nav_time").style.margin = "auto";
                     document.getElementById("nav_time").style.lineHeight = "100%";
                     document.getElementById("nav_time").style.top = "35%";
@@ -62,14 +62,14 @@
                     document.getElementById("nav_line").removeAttribute("style");
                     */
                    
-                    document.getElementById("navigation").style.height = "10%";
+                    document.getElementById("navigation").style.height = "98px";
 
                     document.getElementById("nav_hover").style.width = "20%";
                     document.getElementById("nav_hover").style.height = "80%";
 
                     document.getElementById("nav_time").style.width = "100%";
                     document.getElementById("nav_time").style.height = "100%";
-                    document.getElementById("nav_time").style.fontSize = "48px";
+                    document.getElementById("nav_time").style.fontSize = "300%";
                     document.getElementById("nav_time").style.margin = "auto";
                     document.getElementById("nav_time").style.lineHeight = "200%";
                     document.getElementById("nav_time").style.top = "0%";
