--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html <!DOCTYPE html>
 <html>
 
 <head>
@@ -7,35 +6,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="cssreset.css" />
+    <link rel="stylesheet" type="text/css" media="only screen and (min-width:1281px)" href="style.css" />
+    <link rel="stylesheet" type="text/css" media="only screen and (max-width:1280px)" href="style_min.css" />
 </head>
 
 <body>
     <div class="wrapper">
         <article class="main_sector">
             <section class="info">
-                <div class="info_texts">
-                    <div class="header_container">
-                        <div class="general header_text header_main">
-                            <h1 class="info_header">General Info</h1>
-                            <p class="info_desc">general information about me</p>
-                        </div>
-                        <div class="project header_text">
-                            <h1 class="info_header">Projects</h1>
-                            <p class="info_desc">side projects I'm working on</p>
-                        </div>
-                        <div class="asset header_text">
-                            <h1 class="info_header">Assets</h1>
-                            <p class="info_desc">i make assets</p>
-                        </div>
-                        <div class="other header_text">
-                            <h1 class="info_header">Other</h1>
-                            <p class="info_desc">some other random stuff</p>
-                        </div>
-                    </div>
-                </div>
                 <div class="panel">
+                        <div class="info_texts">
+                                <div class="header_container">
+                                    <div class="general header_text header_main">
+                                        <h1 class="info_header">General Info</h1>
+                                        <p class="info_desc">general information about me</p>
+                                    </div>
+                                    <div class="project header_text">
+                                        <h1 class="info_header">Projects</h1>
+                                        <p class="info_desc">side projects I'm working on</p>
+                                    </div>
+                                    <div class="asset header_text">
+                                        <h1 class="info_header">Assets</h1>
+                                        <p class="info_desc">i make assets</p>
+                                    </div>
+                                    <div class="other header_text">
+                                        <h1 class="info_header">Other</h1>
+                                        <p class="info_desc">some other random stuff</p>
+                                    </div>
+                                </div>
+                            </div>
+
                     <div class="anchor_panel">
                         <ul>
                             <li onclick="changeText('general')">General Info</li>
