--- a/index.html
+++ b/index.html
@@ -50,37 +50,45 @@
                     <div class="main_content">
                         <div class="texts_container">
                             <div class="general content_texts main_text">
-                                <p>There is nothing much to see here.
+                                <p>Project hosting hub for Jackson
+                                    <br>
+                                    Find projects I have completed under "Project" tab for more detail
                                     <br><br>
-                                    The pictures to the right are just placeholders.
-                                    <br>
-                                    I made basically nothing good enough to put on here, so this site is pretty much
-                                    empty.
-                                    <br><br>
-                                    This panel should be full of texts but dunno what to put on here.
-                                    <br>
-                                    <br>
-                                    Though, there are some cool background effects. (TBA)
+                                    Images are hyperlinks to the project 
                                 </p>
                             </div>
                             <div class="project content_texts">
-                                <p>These are the project I have worked on.
-                                    <br>
-                                    As you can see, there is nothing here, but I will add some in the future.
+                                <p>Below are the projects that I have completed / currently working on (hyperlinked)
                                     <br><br>
-                                    While you're here, you can go download my game on Google Play Store.
+                                    <ul>
+                                        <li>Completed:</li>
+                                        <li><a target="_blank" href="https://play.google.com/store/apps/details?id=com.jy.mywatchlist">
+                                            My Watch List - Android App</a></li>
+                                        <li><a target="_blank" href="https://play.google.com/store/apps/details?id=com.jackson.deflect&hl=en">
+                                            Deflect - Mobile game</a></li>
+                                    </ul>
                                     <br><br>
-                                    <a href="https://play.google.com/store/apps/details?id=com.jackson.deflect&hl=en">Here!</a>
+                                    <ul>
+                                        <li>Work In Progress:</li>
+                                        <li>Grade Tracker: Android App</li>
+                                    </ul>
                                 </p>
                             </div>
                             <div class="asset content_texts">
                                 <p>I make assets on my own accord or as per request.
-                                    <br><br>
+                                    <br>
                                     So, if you need assets that are 2D or 3D for your game and whatnot, you can contact
                                     me.
                                     <br><br>
-                                    Currently, some of my assets are on <a href="https://jaks.itch.io/">itch.io</a>
-                                    and you can head over there to check them out.
+                                    Completed asset packs hosted on <a target="_blank" href="https://jaks.itch.io/">itch.io</a>:
+                                    <ul>
+                                        <li><a target="_blank" href="https://jaks.itch.io/lowpolyforestpack">
+                                            Low Poly Forest Pack</a></li>
+                                        <li><a target="_blank" href="https://jaks.itch.io/low-poly-rifle-pack">
+                                            Low Poly Rifle Pack</a></li> 
+                                        <li><a target="_blank" href="https://jaks.itch.io/lowpolymeleeweapon">
+                                            Low Poly Melee Weapon Pack</a></li>  
+                                    </ul>
                                 </p>
                             </div>
                             <div class="other content_texts">
@@ -108,9 +116,10 @@
 
                         <div class="content_slideshow">
                             <div class="content_offset">
-                                <img class="slide" src="imgs/holder1.png">
-                                <img class="slide" src="imgs/holder2.jpg">
-                                <img class="slide" src="imgs/holder3.jpg">
+                                <a class="slide" target="_blank" href="https://play.google.com/store/apps/details?id=com.jy.mywatchlist">
+                                    <img src="imgs/mwl1.png"></a>
+                                <a class="slide" target="_blank" href="https://jaks.itch.io/lowpolyforestpack"><img src="imgs/asset1.png"></a>
+                                <a class="slide"><img src="imgs/holder3.jpg"></a>
                             </div>
                         </div>
                     </div>
