added donation button

--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
                         <div class="header_container">
                             <div class="general header_text header_main">
                                 <h1 class="info_header">General Info</h1>
-                                <p class="info_desc">general information about me</p>
+                                <p class="info_desc">general informations</p>
                             </div>
                             <div class="project header_text">
                                 <h1 class="info_header">Projects</h1>
-                                <p class="info_desc">side projects I'm working on</p>
+                                <p class="info_desc">projects I'm working on</p>
                             </div>
                             <div class="asset header_text">
                                 <h1 class="info_header">Assets</h1>
-                                <p class="info_desc">i make assets</p>
+                                <p class="info_desc">I make assets</p>
                             </div>
                             <div class="other header_text">
                                 <h1 class="info_header">Other</h1>
@@ -51,10 +51,12 @@
                         <div class="texts_container">
                             <div class="general content_texts main_text">
                                 <p>Project hosting hub for Jackson
-                                    <br>
-                                    Find projects I have completed under "Project" tab for more detail
                                     <br><br>
-                                    Images are hyperlinks to the project 
+                                    Find projects I have completed under "Projects" tab for more detail
+                                    <br><br>
+                                    Links to the assets that I have published are under "Assets"
+                                    <br><br>
+                                    Contact info and other miscellaneous are under "Other Stuff"
                                 </p>
                             </div>
                             <div class="project content_texts">
@@ -94,11 +96,15 @@
                             <div class="other content_texts">
                                 <p>Here are some of the side stuff.
                                     <br><br>
-                                    I draw. So when I've actually drawn some nice stuff, I'll put it on here.
-                                    <br><br>
-                                    Watched anime list will be on here in the future for my easy access sake.
+                                    There will be drawn 3D modeling references, painting, character art on here in the future.
                                     <br><br>
                                     Will also put other stuff (ex. school) on here too. Maybe.
+                                    <br><br>
+                                    If you would like to support me by buying a cup of coffee, then you can do so
+                                    <a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=GQ78DPFNZS6VG&currency_code=CAD&source=url">
+                                        here.</a> 
+                                    <br>
+                                    All support are appreciated!
                                     <br><br>
                                 </p>
                                 <h1>Socials</h1>
@@ -119,7 +125,7 @@
                                 <a class="slide" target="_blank" href="https://play.google.com/store/apps/details?id=com.jy.mywatchlist">
                                     <img src="imgs/mwl1.png"></a>
                                 <a class="slide" target="_blank" href="https://jaks.itch.io/lowpolyforestpack"><img src="imgs/asset1.png"></a>
-                                <a class="slide"><img src="imgs/holder3.jpg"></a>
+                                <a class="slide"><img src="imgs/holder2.jpg"></a>
                             </div>
                         </div>
                     </div>
