--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
                                     <br><br>
                                     <ul>
                                         <li>Work In Progress:</li>
-                                        <li>Grade Tracker: Android App</li>
+                                        <li><a target="_blank" href="https://github.com/Jaks01/2d-game-prototype/blob/master/opentk_documentation.docx">
+                                            OpenTK Documentations</a></li>
+                                        <li>Grade Tracker - Android App</li>
                                     </ul>
                                 </p>
                             </div>
