--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="imgs/main_bg2.png"
     <link rel="stylesheet" type="text/css" media="screen" href="cssreset.css" />
     <link rel="stylesheet" type="text/css" media="only screen and (min-width:1281px)" href="style.css" />
     <link rel="stylesheet" type="text/css" media="only screen and (min-width:420px) and (max-width:1280px)" href="style_min.css" />
