--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <link rel="stylesheet" type="text/css" media="only screen and (min-width:1281px)" href="style.css" />
     <link rel="stylesheet" type="text/css" media="only screen and (min-width:420px) and (max-width:1280px)" href="style_min.css" />
     <link rel="stylesheet" type="text/css" media="only screen and (max-width:419px)" href="style_mobile.css" />
+    <script type="text/javascript" src="jquery-3.3.1.min.js"></script>
 </head>
 
-<body>
+<body onload="$('.wrapper').delay(200).animate({'opacity': '1'}, 750);">
     <div class="wrapper">
         <article class="main_sector">
             <section class="info">
@@ -61,7 +62,7 @@
                                 </p>
                             </div>
                             <div class="project content_texts">
-                                <p>Below are the projects that I have completed / currently working on (hyperlinked)
+                                <p>Below are the projects that I have completed & currently working on
                                     <br><br>
                                     <ul>
                                         <li>Completed:</li>
