--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="icon" href="imgs/main_bg2.png"/>
     <link rel="stylesheet" type="text/css" media="screen" href="cssreset.css" />
     <link rel="stylesheet" type="text/css" media="only screen and (min-width:1281px)" href="style.css" />
-    <link rel="stylesheet" type="text/css" media="only screen and (min-width:420px) and (max-width:1280px)" href="style_min.css" />
-    <link rel="stylesheet" type="text/css" media="only screen and (max-width:419px)" href="style_mobile.css" />
+    <link rel="stylesheet" type="text/css" media="only screen and (min-width:447px) and (max-width:1280px)" href="style_min.css" />
+    <link rel="stylesheet" type="text/css" media="only screen and (max-width:446px)" href="style_mobile.css" />
     <script type="text/javascript" src="jquery-3.3.1.min.js"></script>
 </head>
 
@@ -53,6 +53,8 @@
                         <div class="texts_container">
                             <div class="general content_texts main_text">
                                 <p>Project hosting hub for Jackson
+                                    <br><br>
+                                    I can make websites, 2d or 3d assets, games, apps, and animations. (Some better than other)
                                     <br><br>
                                     Find projects I have completed under <a onclick="changeText('project')">Projects</a> for more detail
                                     <br><br>
