added entry to work in progress

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                                     <br><br>
                                     <ul>
                                         <li>Work In Progress:</li>
+                                        <li>My Spending List - Android App</li>
                                         <li><a target="_blank" href="https://github.com/Jaks01/2d-game-prototype/blob/master/opentk_documentation.docx">
                                             OpenTK Documentations</a></li>
                                         <li>Portfolio - Website</li>
